--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Poiret+One|Roboto');
+*{
+    box-sizing: border-box;
+    padding:0;
+    margin:0;
+}
