--- a/src/app/Views/dashboard/dashboard/dashboard.component.html
+++ b/src/app/Views/dashboard/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button>logout</button>
+<button mat-raised-button (click)='logOut()'>logout</button>
 <router-outlet></router-outlet>
 
